# apertium-hbs

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  README  TODO  alt.xsl  apertium-hbs.cyr-lat.dix  apertium-hbs.hbs-coarse.tsx  apertium-hbs.hbs-fine-grained.tsx  apertium-hbs.hbs-semi-coarse.tsx  apertium-hbs.hbs.acx  apertium-hbs.hbs.metadix  apertium-hbs.hbs.rlx  apertium-hbs.hbs.tsx  apertium-hbs.pc.in  apertium-hbs.post-hbs.dix  configure.ac  export-lexicon.ap-me.HR.sh  export-lexicon.ap-me.SR.sh  export-lexicon.ap-me.py  export-lexicon.ap-me.py3.py  export-lexicon.ap-me.sh  hbs-coarse.prob  hbs-supervised.make  hbs-supervised.make.stderr  hbs.prob  modes.xml
dev/: ConstraintGrammar-Croatian.rlx
hbs-tagger-data/: hbs.dic  hbs.tagged  hbs.tagged.txt  hbs.untagged  sentencize.py
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
